--- a/paper-progress-button.html
+++ b/paper-progress-button.html
@@ -4,6 +4,8 @@
 <link rel="import" href="../paper-spinner/paper-spinner-lite.html">
 
 <!--
+A paper button gets disabled and shows a spinner while submitting
+
 @demo demo/index.html
 -->
 <dom-module id="paper-progress-button">
