Element should be not-disabled by default

--- a/paper-progress-button.html
+++ b/paper-progress-button.html
@@ -58,7 +58,7 @@ A paper button gets disabled and shows a spinner while submitting
 					/** True if the button can't be pressed */
 					disabled: {
 						type: Boolean,
-						value: true,
+						value: false,
 					},
 					/** Text shown while the button is active, e.g. "Submit" */
 					activeText: String,
